--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNSOn1VDeDGcoKgDUQGhnuv",
+      "authorship_tag": "ABX9TyOsUdgVjNQ6XD9jWAdr8I/K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -393,6 +393,48 @@
       },
       "source": [
         "#5.1.1 The convolution operation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J8EeiPD2JRg-",
+        "colab_type": "text"
+      },
+      "source": [
+        "The fundamental difference between a densely connected layer and a convolution layer is this: Dense layers learn global pattern in their input feature space, whereas convolution layers learn local patterns: in the case of images, patterns found in small 2D windows of the inputs. In the previous example, these windows were all 3 x 3. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "znlSq-3VJ2Rq",
+        "colab_type": "text"
+      },
+      "source": [
+        "This key characteristic gives convnets two interesting properties:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PcJQFj6jKFj2",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *The patterns they learn are translation invariant*. After learning a certain pattern in the lower-rigth corner of a picture, a convnet can recognize it anywhere: for example, in the upper-left corner. A densely connected network would have to learn pattern annew if it appeared at a new location. This makes convnets data efficient when processing images (because *the visual world is fundamentally translation invariant*): they need fewer training samples to learn representations that have generalization power.\n",
+        "\n",
+        "* *They can learn spatial hierarchies of patterns*. A first convolution layer will learn small local patterns such as edges, a second convolution layer will learn larger patterns made of the features of the first layers, and so on. This allows convnets to efficiently learn increasingly complex and abstract visual concepts (because *the visual world is fundamentally spatially hierarchical*.)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DVKvLuPJM-j_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Convolutions operate over 3D tensors, called *feature maps*, with "
       ]
     }
   ]
