Convolution operator in more detail

--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOsUdgVjNQ6XD9jWAdr8I/K",
+      "authorship_tag": "ABX9TyOS0RjgGeiwz+KgO6AYVoBJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "model.add(layers.MaxPooling2D(2,2))\n",
         "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
         "model.add(layers.Dense(64, activation='relu'))\n",
         "model.add(layers.Dense(10, activation='softmax'))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
         "              metrics=['accuracy'])\n",
         "model.fit(train_images, train_labels, epochs=5, batch_size=64)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +334,7 @@
       "source": [
         "test_loss, test_acc = model.evaluate(test_images, test_labels)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +359,7 @@
       "source": [
         "test_acc"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,7 +434,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Convolutions operate over 3D tensors, called *feature maps*, with "
+        "Convolutions operate over 3D tensors, called *feature maps*, with two spatial axes( *height* and *width*) as well as a *depth* axis (also called the *channels* axis). For an RGB image, the dimension of the depth axis is 3, because the image has three color channels: red, green, and blue. The convolution operation extracts patches from its input feature map and applies the same transformation to all of these patches, producing an *output feature map*. This output feature map is still a 3D tensor: it has a width and a height. Its depth can be arbitrary, because the output depth is a parameter of the layer, and the different channels in that depth axis no longer stand for specific colors as in RGB input; rather, they stand for *filters*. Filters encode specific apsects of the input: at a high level, a single filter could encode the concept \"presence of a face in the input,\" for instance."
       ]
     }
   ]
